--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "presets": [
       "react",
       "babel-preset-env"
+    ],
+    "plugins": [
+      "transform-object-rest-spread"
     ]
   },
   "nyc": {
@@ -36,6 +39,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.5",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chai": "^4.1.2",
